<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".UploadPhoto">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIP1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:background="#FFC627"
        android:hint="@string/enter_ip_1"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIP2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:background="#FFC627"
        android:hint="@string/enter_ip_2"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIP3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:background="#FFC627"
        android:hint="@string/enter_ip_3"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIP4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="#FFC627"
        android:hint="@string/enter_ip_4"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="280dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="43dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/preview_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#8E0B3E"
        android:text="@string/upload"
        android:textColor="#FFC627"
        app:layout_constraintEnd_toEndOf="@+id/editTextIP4"
        app:layout_constraintTop_toBottomOf="@+id/editTextIP4" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#8E0B3E"
        android:text="@string/back"
        android:textColor="#FFC627"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextIP4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="68dp">

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>